force-app/main/default/objects/hed__Course_Enrollment__c/fields/Course_Type__c.field-meta.xml
<CustomField>
    <fullName>Course_Type__c</fullName>
    <description>Indicates the type of the course that the student is enrolled for. Looks up the record type on hed__Course__c.</description>
    <formula>IF( hed__Course_Offering__r.hed__Course__r.RecordType.Name = &apos;Credit&apos;,&apos;Credit&apos;,&apos;Noncredit&apos;)</formula>
    <label>Course Type</label>
    <type>Text</type>
</CustomField>