force-app/main/default/objects/hed__Course_Enrollment__c/fields/Offering_Reference__c.field-meta.xml
<CustomField>
    <fullName>Offering_Reference__c</fullName>
    <formula>hed__Course_Offering__r.lms_hed__LMS_Reference_Code__c</formula>
    <label>Offering Reference</label>
    <type>Text</type>
</CustomField>