force-app/main/default/objects/hed__Course_Enrollment__c/fields/Registration_Batch__c.field-meta.xml
<CustomField>
    <fullName>Registration_Batch__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The registration that added this enrollment originally.</description>
    <inlineHelpText>The registration that added this enrollment originally.</inlineHelpText>
    <label>Registration Batch</label>
    <referenceTo>Registration_Batch__c</referenceTo>
    <relationshipLabel>Course Connections</relationshipLabel>
    <relationshipName>Course_Connections</relationshipName>
    <type>Lookup</type>
</CustomField>