force-app/main/default/objects/hed__Course_Enrollment__c/recordTypes/Observer.recordType-meta.xml
<RecordType>
    <fullName>Observer</fullName>
    <active>true</active>
    <label>Observer</label>
</RecordType>