force-app/main/default/objects/hed__Course_Enrollment__c/recordTypes/Student_Pending.recordType-meta.xml
<RecordType>
    <fullName>Student_Pending</fullName>
    <active>true</active>
    <description>Student Enrollment that exists but is not confirmed.</description>
    <label>Student - Pending</label>
</RecordType>